# HackerRankSolutions

./: .gitignore  README.md
C#/DeterminingDNAHealth/: AhoCorasickAlgorithm.cs  DeterminingDNAHealth.csproj  DeterminingDNAHealth.sln  Program.cs  StringSearch.cs
C++/Abbreviation/: CMakeLists.txt  input14.txt  main.cpp
C++/AlmostEqualStrings/: CMakeLists.txt  input.txt  input01.txt  input04.txt  input1.txt  main.cpp  output0.txt  output01.txt  output04.txt
C++/AlmostSorted/: AlmostSorted.sln  AlmostSorted.vcxproj  input04.txt  main.cpp
C++/ArrayManipulation/: ArrayManipulation.sln  ArrayManipulation.vcxproj  CMakeLists.txt  main.cpp
C++/BFS-ShortestReachInAGraph/: CMakeLists.txt  main.cpp
C++/BalancedBrackets/: BalancedBrackets.sln  BalancedBrackets.vcxproj  main.cpp
C++/BalancedForest/: CMakeLists.txt  main.cpp
C++/Candies/: CMakeLists.txt  main.cpp
C++/CastleOnTheGrid/: CMakeLists.txt  main.cpp
C++/CommonChild/: CMakeLists.txt  CommonChild.sln  CommonChild.vcxproj  main.cpp
C++/CountTriplets/: CountTriplets.sln  CountTriplets.vcxproj  main.cpp
C++/CrosswordPuzzle/: CMakeLists.txt  main.cpp
C++/DecibinaryNumbers/: CMakeLists.txt  main.cpp  pattern.txt
C++/DeterminingDNAHealth/: CMakeLists.txt  DeterminingDNAHealth.sln  main.cpp
C++/DeterminingDNAHealth/DeterminingDNAHealth/: AhoCrosickAlgorithm.cpp  DeterminingDNAHealth.vcxproj  Main.cpp
C++/DynamicArray/: DynamicArray.sln
C++/ExtraLongFactorials/: CMakeLists.txt  main.cpp
C++/FindTheNearestClone/: CMakeLists.txt  main.cpp
C++/FormingAMagicSquare/: CMakeLists.txt  main.cpp
C++/FraudulentActivityNotifications/: FraudulentActivityNotifications.sln  FraudulentActivityNotifications.vcxproj  main.cpp
C++/FriendCircleQueries/: CMakeLists.txt  main.cpp
C++/GameofTwoStacks/: GameofTwoStacks.sln  GameofTwoStacks.vcxproj  main.cpp
C++/InsertionSortAdvancedAnalysis/: CMakeLists.txt  main.cpp
C++/Is This a Binary Search Tree/: code.cpp
C++/LargestArea/: LargestArea.sln  LargestArea.vcxproj  main.cpp
C++/LargestRectangle/: CMakeLists.txt  main.cpp
C++/LarggestArea/: LarggestArea.sln  LarggestArea.vcxproj
C++/LowestCommonAncestor/: CMakeLists.txt  LowestCommonAncestor.sln  main.cpp
C++/LuckBalance/: LuckBalance.sln  LuckBalance.vcxproj  main.cpp
C++/MakingCandies/: main.cpp  (+2 more)
(+83 files in other folders)
